- Google Trips
- Google Voice
- Google Wallpapers
- Photomath
- Swipe Snake
- Top Buzz
- Top Buzz viral
- Trip Advisor
- Voice Recorder (w/ alt colors)
- Yelp

Alternate colors for settings, reddit, and downloads
Update google play icon


Version 1.3.3
------------------------------------------------------------------------

Fixes:
Update discord theme for new version
Update google drive icon

New Icons: (36)
- remind me
- pop the lock
- viber messenger
- mticket
- cardboard
- cardboard camera
- iFunny
- pushbullet
- mini metro
- prisma
- evernote
- hotel tonight
- citymapper
- vivino
- imgur
- youtube tv
- komoot
- xbox
- wells fargo
- walgreens
- starbucks
- pizza hut
- nextdoor
- geico
- dominos
- chase bank
- bank of america
- audiomack
- zoom
- apple music
- amazon alexa
- adobe clip
- zoosk
- nike
- citi
- fitbit
- roku

Version 1.3.4
------------------------------------------------------------------------
Fixes: Fix Netflix Icon not applying

Add topic folder with color variations (100 icons)
- Cloud
- Downloads
- Fitness
- Games
- Gallery
- Google
- Maps
- Messages
- Music
- Video


New Icons:
- abc
- Air France
- Alto
- American Airlines
- AmpMe
- Blockfolio
- Brave
- British Airways
- Delta Airlines
- jetBlue
- KLM - Royal Dutch Airlines
- Kayak
- One more dash
- One more line
- Southwest Airlines
- Spectrum TV
- Swiss air
- United Airlines
- Yahoo Finance
- Youtube Kids

Version 1.3.5
------------------------------------------------------------------------

New Icons:
- 500px
- Asana
- Doodle Jump
- Firefox
- Google Arts and Culture
- HQ Trivia
- Imdb
- Kik
- Stack Exchange
- Stack Overflow
- Telegram
- We chat
- Bandcamp
- Bandcamp for artists
- Basecamp 2
- Basecamp 3
- Behance
- Bing
- Bitcoin wallet
- Bitly
- Buffer
- Buzzfeed
- Buzzfeed News
- Coursera
- Blogger
- Dailymotion
- Deezer
- Devianart
- Discover
- Ello
- Fandango
- Feedly
- Foursquare
- Geocaching
- Goodreads
- Gumtree
- Hipchat
- Hipchat beta
- Homify
- Hootsuite
- Houzz
- Icq